Add tamper (interactive) interceptor and UI; wip
